# flick

./: .gitignore  CMakeLists.txt  MAC_PARITY.md  MAC_SETUP.md  README.md
.github/workflows/: build-appimage.yml
docs/: MAC_PARITY_UNDO_TRASH.md
packaging/: Info.plist  io.github.pascalwiemers.flick.appdata.xml  io.github.pascalwiemers.flick.desktop
src/: autopaste.cpp  autopaste.h  githubsync.cpp  githubsync.h  listengine.cpp  listengine.h  main.cpp  markdownstyler.cpp  markdownstyler.h  mathengine.cpp  mathengine.h  notestore.cpp  notestore.h  syntaxhighlighter.cpp  syntaxhighlighter.h  windowdragger.h  windowdragger.mm  windowdragger_fallback.cpp
src/core/: core_listengine.cpp  core_listengine.h  core_mathengine.cpp  core_mathengine.h  core_notestore.cpp  core_notestore.h  core_rateprovider.h  core_ratestore.cpp  core_ratestore.h  core_statsengine.cpp  core_statsengine.h  core_units.cpp  core_units.h
src/macos/: AppDelegate.h  AppDelegate.mm  EditorViewController.h  EditorViewController.mm  GitHubSyncManager.h  GitHubSyncManager.mm  main.mm
src/qml/: main.qml  qt_listengine.cpp  qt_listengine.h  qt_mathengine.cpp  qt_mathengine.h  qt_notestore.cpp  qt_notestore.h  qt_rateprovider.cpp  qt_rateprovider.h  qt_statsengine.cpp  qt_statsengine.h
tests/: core_notestore_history_test.cpp  core_notestore_ids_test.cpp  core_notestore_trash_test.cpp
